--- a/05-advanced-methods.Rmd
+++ b/05-advanced-methods.Rmd
@@ -1,5 +1,16 @@
 # Advanced Methods
 ## Imputation (Missing Data)
+
+Imputation is usually seen as the illegitimate child of statistical analysis. Several reasons that contribute to this negative views could be:  
+
+ (1) Peopled hardly do imputation correctly
+ (2) Imputation can only be applied to a small range of problems correctly
+ 
+If you have missing data on y (dependent variable), you probability would not be able to do any imputation appropriately. However, if you have certain type of missing data (e.g., non-random missing data) in the xs variable (independent variables), then you can still salvage your collected data points with imputation.  
+
+We also need to talk why you would want to do imputation in the first place. If your purpose is inference/ explanation, then imputation would not offer much help. However, if your purpose is prediction, you would want your standard error to be reduced by including information (non-missing data) on other variables of a data point. Then imputation could be the tool that you're looking for.
+
+
 ### Types of Imputation  
 #### Mean, Mode, Median Imputation
 
@@ -67,6 +78,10 @@ For a continuous variable, it uses the mean or mode.
     - Manhattan  
     
 #### Bayesian Ridge regression implementation  
+
+#### Proxy Varible 
+
+Add another variable in the database to indicate whether a value is missing. 
 
 
 ### Criteria for Choosing an Effective Approach
