--- a/08-Appendix.Rmd
+++ b/08-Appendix.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Appendix"
 author: "Mike"
-date: "11/11/2020"
+date: "`r Sys.Date()`"
 output: html_document
 ---
 
@@ -21,6 +21,10 @@ type function faster | `snip + shift + tab`
 type faster | `use tab for fuzzy match`
 | `cmd + up`
 |`ctrl + .`
+
+
+<br>
+Sometimes you can't stage a folder because it's too large. In such case, use `Terminal` pane in Rstudio then type `git add -A` to stage all changes then commit and push like usual.
 
 
 ## Function short-cut
