--- a/09-bookdown_cheat_sheet.Rmd
+++ b/09-bookdown_cheat_sheet.Rmd
@@ -228,10 +228,11 @@ $$f(y|N,p) = \frac{N!}{y!(N-y)!}\cdot p^y \cdot (1-p)^{N-y} = {{N}\choose{y}} \c
 ```
 $(\mathbf{x}^T\mathbf{x})^{-1}\mathbf{x}^T\mathbf{y}$
 
+## heading
 
 ## About labelling things {#id-example}
 
-You can label chapter and section titles using `{#label}` after them, e.g., we can reference Section \@ref(id-example). If you do not manually label them, there will be automatic labels anyway, e.g., this reference to the unlabelled heading \@ref(heading-blah-blah) uses the automatically generated label `\@ref(heading-blah-blah)`.
+You can label chapter and section titles using `{#label}` after them, e.g., we can reference Section \@ref(id-example). If you do not manually label them, there will be automatic labels anyway, e.g., this reference to the unlabelled heading \@ref(heading) uses the automatically generated label `\@ref(heading)`.
 
 ## Cross-references
 
