--- a/index.Rmd
+++ b/index.Rmd
@@ -116,19 +116,21 @@ Then $A^{-1}=B$. For a 2x2 matrix,
 
 $$
 A =
-(\begin{array}{c}
+\left(\begin{array}{c}
 a & b \\
 c & d \\
-\end{array})
+\end{array}
+\right)
 $$
 
 $$
 A^{-1}=
 \frac{1}{ad-bc}
-(\begin{array}{c}
+\left(\begin{array}{c}
 d & -b \\
 -c & a \\
-\end{array})
+\end{array}
+\right)
 $$
 
 For the partition matrix, 
