--- a/references.bib
+++ b/references.bib
@@ -122,3 +122,51 @@
 	journal = {Journal of Marketing}
 }
 
+
+@article{Heckman_1976,
+	year = 1976,
+	volume = {5},
+	number = {4},
+	pages = {475-492},
+	author = {James J. Heckman},
+	title = {The Common Structure of Statistical Models of Truncation, Sample Selection and Limited Dependent Variables and a Simple Estimator for Such Models},
+	journal = {Annals of Economic and Social Measurement}
+}
+@article{Little_1992,
+	doi = {10.2307/2290664},
+	url = {https://doi.org/10.2307%2F2290664},
+	year = 1992,
+	month = {dec},
+	publisher = {{JSTOR}},
+	volume = {87},
+	number = {420},
+	pages = {1227},
+	author = {Roderick J. A. Little},
+	title = {Regression With Missing X{\textquotesingle}s: A Review},
+	journal = {Journal of the American Statistical Association}
+}
+
+
+@book{Vach_1994,
+	doi = {10.1007/978-1-4612-2650-5},
+	url = {https://doi.org/10.1007%2F978-1-4612-2650-5},
+	year = 1994,
+	publisher = {Springer New York},
+	author = {Werner Vach},
+	title = {Logistic Regression with Missing Values in the Covariates}
+}
+
+@article{Glasser_1964,
+	doi = {10.1080/01621459.1964.10480730},
+	url = {https://doi.org/10.1080%2F01621459.1964.10480730},
+	year = 1964,
+	month = {sep},
+	publisher = {Informa {UK} Limited},
+	volume = {59},
+	number = {307},
+	pages = {834--844},
+	author = {M. Glasser},
+	title = {Linear Regression Analysis with Missing Observations among the Independent Variables},
+	journal = {Journal of the American Statistical Association}
+}
+
