--- a/references.bib
+++ b/references.bib
@@ -170,3 +170,59 @@
 	journal = {Journal of the American Statistical Association}
 }
 
+@article{Jones_1996,
+	doi = {10.1080/01621459.1996.10476680},
+	url = {https://doi.org/10.1080%2F01621459.1996.10476680},
+	year = 1996,
+	month = {mar},
+	publisher = {Informa {UK} Limited},
+	volume = {91},
+	number = {433},
+	pages = {222--230},
+	author = {Michael P. Jones},
+	title = {Indicator and Stratification Methods for Missing Explanatory Variables in Multiple Linear Regression},
+	journal = {Journal of the American Statistical Association}
+}
+
+@article{Haitovsky_1968,
+	doi = {10.1111/j.2517-6161.1968.tb01507.x},
+	url = {https://doi.org/10.1111%2Fj.2517-6161.1968.tb01507.x},
+	year = 1968,
+	month = {jan},
+	publisher = {Wiley},
+	volume = {30},
+	number = {1},
+	pages = {67--82},
+	author = {Yoel Haitovsky},
+	title = {Missing Data in Regression Analysis},
+	journal = {Journal of the Royal Statistical Society: Series B (Methodological)}
+}
+
+@article{Gourieroux_1981,
+	doi = {10.2307/2297197},
+	url = {https://doi.org/10.2307%2F2297197},
+	year = 1981,
+	month = {oct},
+	publisher = {Oxford University Press ({OUP})},
+	volume = {48},
+	number = {4},
+	pages = {579},
+	author = {Christian Gourieroux and Alain Monfort},
+	title = {On the Problem of Missing Data in Linear Models},
+	journal = {The Review of Economic Studies}
+}
+
+@article{Beale_1975,
+	doi = {10.1111/j.2517-6161.1975.tb01037.x},
+	url = {https://doi.org/10.1111%2Fj.2517-6161.1975.tb01037.x},
+	year = 1975,
+	month = {sep},
+	publisher = {Wiley},
+	volume = {37},
+	number = {1},
+	pages = {129--145},
+	author = {E. M. L. Beale and R. J. A. Little},
+	title = {Missing Values in Multivariate Analysis},
+	journal = {Journal of the Royal Statistical Society: Series B (Methodological)}
+}
+
