--- a/03-regression-analysis.Rmd
+++ b/03-regression-analysis.Rmd
@@ -3,6 +3,7 @@
 
 ### Ordinary Least Squares
 The most fundamental model in statistics or econometric is a OLS linear regression. 
+OLS = Maximum likelihood when the error term is assumed to be normally distributed. 
 
 
 #### OLS Assumptions
@@ -176,11 +177,43 @@ Var((1/\sigma_i)\epsilon_i|X) &= (1/\sigma_i^2) Var(\epsilon_i|X) \\
 \end{split}
 \end{equation}
 
-then the $$
+then the
 
 
 ### Weighted Least Squares
 
 ### Generalized Least Squares
+
+
+
+### Maximum Likelihood
+Premise: find values of the parameters that maximize the probability of observing the data
+In other words, we try to maximize the value of theta in the likelihood function 
+$$
+L(\theta)=\prod_{i=1}^{n}f(y_i|\theta)
+$$
+$f(y|\theta)$ is the probability density of observing a single value of Y given some value of $\theta$
+$f(y|\theta)$ can be specify as various type of distributions. You can review back section [Distributions]. For example 
+If y is a dichotomous variable, then 
+$$
+L(\theta)=\prod_{i=1}^{n}\theta^{y_i}(1-\theta)^{1-y_i}
+$$
+
+
+
+**Assumption**: 
+observations are independent and have the same density function. 
+
+
+**Properties** 
+[@EJD_1998]
+
+ (1) Consistent: estimates are approximately unbiased in large samples
+ (2) Asymptotically efficient: approximately smaller standard errors compared to other estimator
+ (3) Asymptotically normal: with repeated sampling, the estimates will have an approximately normal distribution. 
+
+
+
+
 
 ## Non-linear Regression
