--- a/references.bib
+++ b/references.bib
@@ -226,3 +226,17 @@
 	journal = {Journal of the Royal Statistical Society: Series B (Methodological)}
 }
 
+@article{EJD_1998,
+	doi = {10.2307/2670147},
+	url = {https://doi.org/10.2307%2F2670147},
+	year = 1998,
+	month = {jun},
+	publisher = {{JSTOR}},
+	volume = {93},
+	number = {442},
+	pages = {844},
+	author = {EJD and Alan Agresti and Barbara Finlay},
+	title = {Statistical Methods for the Social Sciences},
+	journal = {Journal of the American Statistical Association}
+}
+
