--- a/01-intro.Rmd
+++ b/01-intro.Rmd
@@ -34,12 +34,11 @@ Information in this book are from various sources, but the skeleton is based on 
 Course | Professor
 ---|---
 Data Analysis I | Erin M. Schliep
-Applied Econometric | Alyssa Carlson  
-Bayesian | Sounak Chakraborty
+Applied Econometric | Alyssa Carlson
 
 
 
-## Tools of statistics  
+**Tools of statistics**
 
  * Probability Theory  
  * Mathematical Analysis  
@@ -48,7 +47,7 @@ Bayesian | Sounak Chakraborty
  * Database Management  
  
  
-## Setup Working Environment
+**Setup Working Environment**
 
 ```{r}
 if (!require("pacman"))
