--- a/03-regression-analysis.Rmd
+++ b/03-regression-analysis.Rmd
@@ -203,6 +203,7 @@ $$
 
 **Assumption**: 
 observations are independent and have the same density function. 
+Under multivariate normal assumption, ML pyeilds consistent estiates of the means and the ovariance amtix for multivariate dsitriubtion with finite fourth moemnts [@Little_1987]
 
 
 **Properties** 
