--- a/references.bib
+++ b/references.bib
@@ -240,3 +240,31 @@
 	journal = {Journal of the American Statistical Association}
 }
 
+@article{Little_1987,
+	doi = {10.1080/01621459.1987.10478391},
+	url = {https://doi.org/10.1080%2F01621459.1987.10478391},
+	year = 1987,
+	month = {mar},
+	publisher = {Informa {UK} Limited},
+	volume = {82},
+	number = {397},
+	pages = {58--68},
+	author = {Roderick J. A. Little and Philip J. Smith},
+	title = {Editing and Imputation for Quantitative Survey Data},
+	journal = {Journal of the American Statistical Association}
+}
+
+@article{Rubin_1996,
+	doi = {10.1080/01621459.1996.10476908},
+	url = {https://doi.org/10.1080%2F01621459.1996.10476908},
+	year = 1996,
+	month = {jun},
+	publisher = {Informa {UK} Limited},
+	volume = {91},
+	number = {434},
+	pages = {473--489},
+	author = {Donald B. Rubin},
+	title = {Multiple Imputation after 18+ Years},
+	journal = {Journal of the American Statistical Association}
+}
+
