--- a/02-descriptive-stat.Rmd
+++ b/02-descriptive-stat.Rmd
@@ -1,5 +1,16 @@
 # Descriptive Statistics {#descriptive-stat}
 When you have an area of interest that you want to research, a problem that you want to solve, a relationship that you want to investigate, theoretical and empirical processes will help you.  
+
+Estimand is defined as "a quantity of scientific interest that can be calculated in the population and does not change its value depending on the data collection design used to measure it (i.e., it does not vary with sample size and survey design, or the number of nonrespondents, or follow-up efforts)." [@Rubin_1996]
+
+Estimands include:  
+
+ * population means
+ * Population variances 
+ * correlations
+ * factor loading
+ * regression coefficients
+
 ## Numerical Measures
 
 There is a difference between a population and a sample
