--- a/04-imputation.Rmd
+++ b/04-imputation.Rmd
@@ -7,7 +7,7 @@ Imputation is usually seen as the illegitimate child of statistical analysis. Se
  
 If you have missing data on y (dependent variable), you probability would not be able to do any imputation appropriately. However, if you have certain type of missing data (e.g., non-random missing data) in the xs variable (independent variables), then you can still salvage your collected data points with imputation.  
 
-We also need to talk why you would want to do imputation in the first place. If your purpose is inference/ explanation, then imputation would not offer much help. However, if your purpose is prediction, you would want your standard error to be reduced by including information (non-missing data) on other variables of a data point. Then imputation could be the tool that you're looking for.
+We also need to talk why you would want to do imputation in the first place. If your purpose is inference/ explanation (valid statistical inference not optimal point prediction), then imputation would not offer much help [@Rubin_1996]. However, if your purpose is prediction, you would want your standard error to be reduced by including information (non-missing data) on other variables of a data point. Then imputation could be the tool that you're looking for.
 
 
 For most software packages, it will use listwise deletion or casewise deletion to have complete case analysis (analysis with only observations with all information). Not until recently that statistician can propose some methods that are a bit better than listwise deletion which are maximum likelihood and multiple imputation. 
@@ -162,7 +162,17 @@ Advantages
 
 Disadvantages:
 
- (1) Hard to implement
+ (1) Hard to implements
+ 
+ 
+ 
+ 
+#### Multiple Imputation
+MI is designed to use "the Bayesian model-based approach to *create* procedures, and the frequentist (randomization-based approach) to *evaluate* procedures". [@Rubin_1996]
+
+##### Repeated Imputation
+"Repeated imputations are draws from the posterior predictive distribution of the missing values under a specific model , a particular Bayesian model for both the data and the missing mechanism".[@Rubin_1996]
+
 
 #### Mean, Mode, Median Imputation
 
@@ -385,3 +395,4 @@ For example, if women really are less likely to tell you their weight than men, 
 
 
 
+"Judging the quality of missing data procedures by their ability to recreate the individual missing values (according to hit rate, mean square error, etc) does not lead to choosing procedures that result in valid inference", [@Rubin_1996]
