--- a/03-regression-analysis.Rmd
+++ b/03-regression-analysis.Rmd
@@ -7,17 +7,84 @@ OLS = Maximum likelihood when the error term is assumed to be normally distribut
 
 
 #### OLS Assumptions
-##### A1
+##### A1 Linearity
+$$
+A1: y=\mathbf{x}\beta + \epsilon
+$$
 
-##### A2
+Non-restriction
 
-##### A3
+ * x can be nonlinear transformation including interactions, natural log, quadratic
 
-##### A4
+With A3 (Exogeneity of Independent), linearity can be restrictive
 
-##### A5
+###### Log-linear
+###### Linear-Log
+###### Log-Log
+###### Higher Orders
+$y=\beta_0 + x_1\beta_1 + x_1^2\beta_2 + \epsilon$
+$$
+\frac{\partial y}{\partial x_1}=\beta_1 + 2x_1\beta_2
+$$
+
+ * The effect of $x_1$ on y depends on the level of $x_1$
+ * The partial effect at the average = $\beta_1+2E(x_1)\beta_2$
+ * Average Partial Effect = $E(\beta_1 + 2x_1\beta_2)$
+
+###### Interactions
+$y=\beta_0 + x_1\beta_1 + x_2\beta_2 + x_1x_2\beta_3 + \epsilon$
+
+ * $\beta_1$ is the average effect on y for a unit change in $x_1$ when $x_2=0$
+ * $\beta_1 + x_2\beta_3$ is the partial effect of $x_1$ on y which depends on the level of $x_2$
+
+##### A2 Full rank
+$A2: rank(E(x'x))=k$
+
+
+also known as **identification condition**
+
+ * columns of $\mathbf{x}$ cannot be written as a linear function of the other columns
+ * which ensures that each parameter is unique and exists in the population regression equation
+
+
+##### A3 Exogeneity of Independent Variables
+$A3: E[\epsilon|x_1,x_2,...,x_k]=E[\epsilon|\mathbf{x}]=0$
+**strict exogeneity**
+
+ * also known as **mean independence** check back on [Correlation and Independence]
+ * by the [Law of Iterated Expectations] $E(\epsilon)=0$, which can be satisfied by always including an intercept.
+ * independent variables do not carry information for prediction of $\epsilon$
+ * A3 implies $E(y|x)=x\beta$, which means the conditional mean function must be a linear function of x [A1 Linearity]
+
+##### A4 Homoskedasticity
+$A4: Var(\epsilon|x)=Var(\epsilon)=\sigma^2$
+
+ * Variation in the disturbance to be the same over the independent variables
+
+##### A5 Data Generation (random Sampling)
+$A5: {y_i,x_{i1},...,x_{ik-1}: i = 1,..., n}$ is a random sample
+
+ * random sample mean samples are independent and identically distributed (iid) from a joint distribution of $(y,\mathbf{x})$
+ * with [A3][A3 Exogeneity of Independent Variables] and [A4][A4 Homoskedasticity], we have
+    + **Strict Exogeneity**: $E(\epsilon_i|x_1,...,x_n)=0$. independent variables do not carry information for prediction of $\epsilon$
+    + **Non-autocorrelation**: $E(\epsilon_i\epsilon_j|x_1,...,x_n)=0$ The error term is uncorrelated across the draws conditional on the independent variables
+ * In times series and spatial settings, A5 is less likely to hold.
 
 ##### A6
+
+
+
+
+From A1-A3, we have **identification** of the population parameter $\beta$
+
+\begin{align}
+y &= {x}\beta + \epsilon && \text{A1} \\
+x'y &= x'x\beta + x'\epsilon && \text{} \\
+E(x'y) &= E(x'x)\beta + E(x'\epsilon)  && \text{} \\
+E(x'y) &= E(x'x)\beta && \text{A3} \\
+[E(x'x)]^{-1}E(x'y) &= [E(x'x)]^{-1}E(x'x)\beta && \text{A2} \\
+[E(x'x)]^{-1}E(x'y) &= \beta
+\end{align}
 
 
 
@@ -203,7 +270,7 @@ $$
 
 **Assumption**: 
 observations are independent and have the same density function. 
-Under multivariate normal assumption, ML pyeilds consistent estiates of the means and the ovariance amtix for multivariate dsitriubtion with finite fourth moemnts [@Little_1987]
+Under multivariate normal assumption, ML yields consistent estimates of the means and the covariance matrix for multivariate distribution with finite fourth moments [@Little_1987]
 
 
 **Properties** 
