--- a/index.Rmd
+++ b/index.Rmd
@@ -298,6 +298,46 @@ $$
 P[A_|B]=\frac{P[B|A_j]P[A_j]}{\sum_{i=1}^{n}P[B|A_j]P[A_i]}
 $$
 
+**Jensen's Inequality**
+
+ * If g(x) is convex $E(g(X)) \ge g(E(X))$
+ * If g(x) is concave $E(g(X)) \le g(E(X))$
+
+
+
+#### Law of Iterated Expectations
+$E(Y)=E(E(Y|X))$
+
+#### Correlation and Independence
+**Independence**
+
+ * $f(x,y)=f_X(x)f_Y(y)$
+ * $f_{Y|X}(y|x)=f_Y(y)$ and $f_{X|Y}(x|y)=f_X(x)$
+ * $E(g_1(X)g_2(Y))=E(g_1(X))E(g_2(Y))$
+
+**Mean Independence** (implied by independence)
+
+ * Y is mean independent of X if and only if $E(Y|X)=E(Y)$
+ * $E(Xg(Y))=E(X)E(g(Y))$
+ 
+**Uncorrelated** (implied by independence and mean independence)
+
+ * $Cov(X,Y)=0$
+ * $Var(X+Y)=Var(X) + Var(Y)$
+ * $E(XY)=E(X)E(Y)$ 
+
+$$
+Strongest \\
+\downarrow \\
+Independence \\
+\downarrow \\
+Mean Independence \\
+\downarrow \\
+Uncorrelated \\ 
+\downarrow \\
+Weakest
+$$
+
 <br>
 
 
@@ -325,9 +365,12 @@ Expected value Properties:
 
 Expected Variance Properties:  
 
- * Var c = 0 for any constant c  
- * Var $cX = c^2Var(X)$ for any constant c  
- * Var (X+Y) = Var(X) + Var(Y) (if X and Y are independent)
+ * $Var(c) = 0$ for any constant c  
+ * $Var(cX) = c^2Var(X)$ for any constant c  
+ * $Var(X) \ge 0$
+ * $Var(X) = E(X^2) - (E(X))^2$
+ * $Var(X+c)=Var(X)$
+ * $Var (X+Y) = Var(X) + Var(Y)$ (if X and Y are independent)
 
 Standard deviation 
 $\sigma=\sqrt(\sigma^2)=\sqrt(Var X)$
@@ -352,7 +395,104 @@ Skewness(X) = $E((X-\mu)^3)/\sigma^3$
 Kurtosis(X) = $E((X-\mu)^4)/\sigma^4$  
 
 
+**Conditional Moments**
+$$
+E(Y|X=x)=
+\begin{cases}
+\sum_yyf_Y(y|x) & \text{for discrete RV}\\
+\int_yyf_Y(y|x)dy & \text{for continous RV}\\
+\end{cases}
+$$
+
+
+
+$$
+Var(Y|X=x)=
+\begin{cases}
+\sum_y(y-E(Y|x))^2f_Y(y|x) & \text{for discrete RV}\\
+\int_y(y-E(Y|x))^2f_Y(y|x)dy & \text{for continous RV}\\
+\end{cases}
+$$
+
+
+
+#### Multivariate Moments
+
+$$
+\begin{equation}
+E=
+\left(
+\begin{array}{c}
+X \\
+Y \\
+\end{array}
+\right)
+=
+\left(
+\begin{array}{c}
+E(X) \\
+E(Y) \\
+\end{array}
+\right)
+=
+\left(
+\begin{array}{c}
+\mu_X \\
+\mu_Y \\
+\end{array}
+\right)
+\end{equation}
+$$
+
+
+$$
+\begin{equation}
+\begin{split}
+Var
+\left(
+\begin{array}{c}
+X \\
+Y \\
+\end{array}
+\right)
+&=
+\left(
+\begin{array}{c}
+Var(X) & Cov(X,Y) \\
+Cov(X,Y) & Var(Y) \\
+\end{array}
+\right) \\
+&=
+\left(
+\begin{array}{c}
+E((X-\mu_X)^2) & E((X-\mu_X)(Y-\mu_Y)) \\
+E((X-\mu_X)(Y-\mu_Y)) & E((Y-\mu_Y)^2) \\
+\end{array}
+\right)
+\end{split}
+\end{equation}
+$$
+<br>
+
+**Properties**
+
+ * $E(aX + bY + c)=aE(X) +bE(Y) + c$
+ * $Var(aX + bY + c) = a^2Var(X) + b^2Var(Y) + 2abCov(X,Y)$
+ * $Cov(aX + bY, cX + bY) =acVar(X)+bdVar(Y) + (ad+bc)Cov(X,Y)$
+ * Correlation: $\rho_{XY} = \frac{Cov(X,Y)}{\sigma_X\sigma_Y}$
+
+
+
+
 ### Distributions
+
+**Conditional Distributions**
+$$
+f_{X|Y}(X|Y=y)=\frac{f(X,Y)}{f_Y(y)}
+$$
+$f_{X|Y}(X|Y=y)=f_X(X)$ if X and Y are independent
+
+
 #### Discrete
 
 |Distribution| Density | CDF | MGF | Mean | Variance |
@@ -365,6 +505,39 @@ Kurtosis(X) = $E((X-\mu)^4)/\sigma^4$
 
 CDF: Cumulative Density Function 
 MGF: Moment Generating Function
+
+
+##### Bernoulli
+$Bernoulli(p)$
+
+##### Binomial
+$B(n,p)$
+
+##### Poisson
+$Pois(\lambda)$
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+
+
+
+
+
 
 <br>
 
@@ -402,6 +575,35 @@ MGF: Moment Generating Function
 |---|---|---|---|---|---|
 |Uniform|$f(x)=\frac{1}{b-a}$ for a < x < b | \begin{cases}0&\text{if x <a }\frac{x-a}{b-a}&\text{if $a \le x \le b$ }\\1&\text{if x >b}\\\end{cases}| \begin{cases}\frac{e^{tb} - e^{ta}}{t(b-a)}&\text{ if $t \neq 0$}\\1&\text{if $ t \neq 0$}\\\end{cases}| \frac{a+b}{2}| \frac{(b-a)^2}{12}|
 
+##### Normal 
+$N(\mu,\sigma^2)$
 
+##### Logistic
+$Logistic(\mu,s)$
+
+##### Lognomral
+$lognormal(\mu,\sigma^2)$
+
+##### Exponential 
+$Exp(\lambda)$
+
+##### Chi-squared
+$\chi^2=\chi^2(k)$
+
+##### Student T
+$T(v)$
+
+##### F-Distribution
+$F(d_1,d_2)$
+
+##### 
+
+##### 
+
+##### 
+
+##### 
+
+##### 
 
 
